force-app/main/default/objects/Contact/fields/Solution_Interest__c.field-meta.xml
<CustomField>
    <fullName>Solution_Interest__c</fullName>
    <inlineHelpText>Solution Interest from NCR.com product level page</inlineHelpText>
    <label>Solution Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>