force-app/main/default/objects/Contact/fields/Survey_Flag__c.field-meta.xml
<CustomField>
    <fullName>Survey_Flag__c</fullName>
    <label>Relationship Survey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No-Prospect</fullName>
            </value>
            <value>
                <fullName>No-Customer Policy</fullName>
            </value>
            <value>
                <fullName>No-Customer Opt Out</fullName>
            </value>
            <value>
                <fullName>No-Customer Contract</fullName>
            </value>
            <value>
                <fullName>No-Account Request</fullName>
            </value>
            <value>
                <fullName>No-Indirect Customer</fullName>
            </value>
            <value>
                <fullName>No-Per CX Team</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>