force-app/main/default/objects/Contact/fields/Suspend_Marketing_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Suspend_Marketing_Campaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend Marketing Campaigns</label>
    <type>Checkbox</type>
</CustomField>