force-app/main/default/objects/Contact/fields/SuspendProcessing_Contact__c.field-meta.xml
<CustomField>
    <fullName>SuspendProcessing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated by Eloque. If the value is checked, this Contact should not be processed any where in the system. This field is created under GDPR request.</description>
    <label>Suspend Processing</label>
    <type>Checkbox</type>
</CustomField>