force-app/main/default/objects/Contact/fields/Total_Survey_Results__c.field-meta.xml
<CustomField>
    <fullName>Total_Survey_Results__c</fullName>
    <description>This fields is created temporary basis to extract inactive contacts with no survey results</description>
    <label>Total Survey Results</label>
    <summaryForeignKey>Survey_Result__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>