force-app/main/default/objects/Contact/fields/User_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Modified_Date__c</fullName>
    <description>This field is updated automatically whenever the Contact has been updated by anybody other than system</description>
    <label>User Modified Date</label>
    <type>DateTime</type>
</CustomField>