force-app/main/default/objects/Contact/fields/Web_Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_Login__c</fullName>
    <description>This contact&apos;s login for access of the NCR Web Portal</description>
    <label>Web Portal Login</label>
    <length>20</length>
    <type>Text</type>
</CustomField>