force-app/main/default/objects/Contact/fields/What_is_NCR_doing_to_help__c.field-meta.xml
<CustomField>
    <fullName>What_is_NCR_doing_to_help__c</fullName>
    <label>What is NCR doing to help?</label>
    <type>TextArea</type>
</CustomField>