force-app/main/default/objects/Contact/fields/WOT_Role__c.field-meta.xml
<CustomField>
    <fullName>WOT_Role__c</fullName>
    <description>WOT user role assigned to this user.</description>
    <inlineHelpText>Indirect Sales user CANNOT submit an order to NCR.
Indirect User CAN submit an order to NCR.</inlineHelpText>
    <label>WOT Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indirect Sales User</fullName>
            </value>
            <value>
                <fullName>Indirect User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>