force-app/main/default/objects/Contact/fields/WOT_User__c.field-meta.xml
<CustomField>
    <fullName>WOT_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WOT User</label>
    <type>Checkbox</type>
</CustomField>