force-app/main/default/objects/Contact/fields/X2010_Walker_Survey_2__c.field-meta.xml
<CustomField>
    <fullName>X2010_Walker_Survey_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2010 Walker Survey 2</label>
    <type>Checkbox</type>
</CustomField>