force-app/main/default/objects/Contact/fields/X2019_Survey_Wave_1__c.field-meta.xml
<CustomField>
    <fullName>X2019_Survey_Wave_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box is checked for contacts who were sent Wave 1 of the 2019 Qualtrics survey</description>
    <label>2019 Survey Cycle 1</label>
    <type>Checkbox</type>
</CustomField>