force-app/main/default/objects/Contact/fields/X2019_Survey_Wave_2__c.field-meta.xml
<CustomField>
    <fullName>X2019_Survey_Wave_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box is checked for contacts who were sent Wave 2 of the 2019 Qualtrics Survey</description>
    <label>2019 Survey Cycle 2</label>
    <type>Checkbox</type>
</CustomField>