force-app/main/default/objects/Contact/fields/X2020_Customer_Survey__c.field-meta.xml
<CustomField>
    <fullName>X2020_Customer_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>requested by Chris Cusumano/Steve Thoma.  Indicates if contact was sent the 2020 customer survey.</description>
    <label>2020 Customer Survey</label>
    <type>Checkbox</type>
</CustomField>