force-app/main/default/objects/Contact/fields/Zoominfo_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Zoominfo_Company_Name__c</fullName>
    <description>CATM</description>
    <label>Zoominfo Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>