force-app/main/default/objects/Contact/recordTypes/CustomerContact.recordType-meta.xml
<RecordType>
    <fullName>CustomerContact</fullName>
    <active>true</active>
    <description>Customer Contact (used to store Financial and Retail Customer Contacts)</description>
    <label>Customer Contact</label>
</RecordType>