force-app/main/default/objects/Contact/recordTypes/NCRContact.recordType-meta.xml
<RecordType>
    <fullName>NCRContact</fullName>
    <active>true</active>
    <description>Contact employed by NCR</description>
    <label>NCR Contact</label>
</RecordType>