force-app/main/default/objects/Contact/recordTypes/PartnerContact.recordType-meta.xml
<RecordType>
    <fullName>PartnerContact</fullName>
    <active>true</active>
    <description>Partner Contact (used for Financial and Retail Partner Contacts)</description>
    <label>Partner Contact</label>
</RecordType>