force-app/main/default/objects/Contact/recordTypes/Site_Contact.recordType-meta.xml
<RecordType>
    <fullName>Site_Contact</fullName>
    <active>true</active>
    <description>contact record type for site level</description>
    <label>Site Contact</label>
</RecordType>