force-app/main/default/objects/Contact/validationRules/CATM_Require_Account_for_ETL_User.validationRule-meta.xml
<ValidationRule>
    <fullName>CATM_Require_Account_for_ETL_User</fullName>
    <active>true</active>
    <description>Ensure Account field is populated when loading contacts</description>
    <errorConditionFormula>AND(
$Permission.ETL_PreventOverwrite = true,
ISBLANK( AccountId)
)</errorConditionFormula>
    <errorMessage>Account is missing, cannot load Contact.</errorMessage>
</ValidationRule>