force-app/main/default/objects/Contact/validationRules/Partner_User_Do_Not_Change_Other_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_User_Do_Not_Change_Other_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
($User.Id &lt;&gt; Owner.Id),OR(($Profile.Name = &quot;Hospitality SMB Partner Manager&quot;),($Profile.Name = &quot;Hospitality SMB Partner User&quot;)))</errorConditionFormula>
    <errorMessage>Insufficient access rights on object id</errorMessage>
</ValidationRule>