force-app/main/default/objects/Contact/validationRules/Phone_number_required_for_allSMB_users.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_required_for_allSMB_users</fullName>
    <active>true</active>
    <description>When an SMB user creates a new contact record the phone number field should be required.</description>
    <errorConditionFormula>AND( $Profile.Name = &quot;Hospitality SMB Partner User&quot;, ISBLANK( Phone ))</errorConditionFormula>
    <errorDisplayField>of_Franchises__c</errorDisplayField>
    <errorMessage>Contact phone number is required</errorMessage>
</ValidationRule>