force-app/main/default/objects/Contact/validationRules/Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Mandatory</fullName>
    <active>true</active>
    <description>If Survey_Flag__c= &quot;No - Account Request&quot; this field will become mandatory</description>
    <errorConditionFormula>IF(
    AND(
      NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
        ($Profile.Name &lt;&gt; &quot;Marketo Administration&quot;),
        ($Profile.Name &lt;&gt; &quot;Lenos Administration&quot;),
        ($Profile.Name &lt;&gt; &quot;02 NSC Administrator&quot;),
        ($Profile.Name &lt;&gt; &quot;iPaas Administration&quot;),
        ($Profile.Name &lt;&gt; &quot;Soup Integration&quot;),
								($Profile.Name &lt;&gt; &quot;Walker Integration&quot;),
        ($Profile.Name &lt;&gt; &quot;04 NSC UI Administrator&quot;),
        TEXT(Survey_Flag__c) = &quot;No-Account Request&quot;, 
        ISBLANK(Reason__c)), True, False
 )</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Please complete the Reason field to identify why this contact is excluded from the Relationship Survey.</errorMessage>
</ValidationRule>