force-app/main/default/objects/Contact/validationRules/Require_Phone_or_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Phone_or_Email</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
ISBLANK(Phone),
ISBLANK(MobilePhone),
ISBLANK(Email))</errorConditionFormula>
    <errorMessage>ERROR: Phone/Mobile or Email is required.</errorMessage>
</ValidationRule>