force-app/main/default/objects/Contact/validationRules/Restrict_Partner_User_not_to_change_Owne.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Partner_User_not_to_change_Owne</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Automation_Setting__c.Skip_Validation_Rule__c),
ISPICKVAL($UserRole.PortalRole,&apos;User&apos;)
, OwnerId &lt;&gt; $User.Id, ISCHANGED(OwnerId)
, ($Profile.Name &lt;&gt; &quot;Soup Integration&quot;)
,($Profile.Name &lt;&gt; &quot;iPaas Administration&quot;)
)</errorConditionFormula>
    <errorMessage>You are not authorized to change ownership.</errorMessage>
</ValidationRule>