force-app/main/default/objects/Contact/listViews/All_Contacts29.listView-meta.xml
<ListView>
    <fullName>All_Contacts29</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Site_Name__c</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>