force-app/main/default/objects/Contact/listViews/Cardtronics.listView-meta.xml
<ListView>
    <fullName>Cardtronics</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Cardtronics</value>
    </filters>
    <label>CATM Cardtronics</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_CATM</group>
    </sharedTo>
</ListView>