force-app/main/default/objects/Contact/listViews/Customer_Contact_Update.listView-meta.xml
<ListView>
    <fullName>Customer_Contact_Update</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Survey_Flag__c</columns>
    <columns>Decision_Maker__c</columns>
    <columns>Level__c</columns>
    <columns>Business_Function__c</columns>
    <columns>Additional_Relationships__c</columns>
    <columns>Primary_Language__c</columns>
    <columns>Active_Contact__c</columns>
    <columns>Account.Account_Owner_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.CustomerContact</value>
    </filters>
    <filters>
        <field>Active_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Survey_Flag__c</field>
        <operation>equals</operation>
        <value>Yes,No-Prospect,No-Customer Policy,No-Customer Opt Out,No-Customer Contract,No-Account Request,No-Indirect Customer</value>
    </filters>
    <label>Customer Survey Cleanup - My Contacts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>