force-app/main/default/objects/Contact/listViews/Customer_Survey_Selection_My_Contacts.listView-meta.xml
<ListView>
    <fullName>Customer_Survey_Selection_My_Contacts</fullName>
    <columns>Account.Master_Customer_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Customer_Survey_Eligible__c</columns>
    <columns>Survey_Flag__c</columns>
    <columns>Decision_Maker__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Level__c</columns>
    <columns>Additional_Relationships__c</columns>
    <columns>Account.Account_Owner_Name__c</columns>
    <columns>Account.Active_Account__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Account.Region__c</columns>
    <columns>Account.Account_Region__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.CustomerContact</value>
    </filters>
    <label>Customer Survey Selection - My Contacts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>