force-app/main/default/objects/Contact/listViews/Customer_Survey_Status_My_Contacts_PS.listView-meta.xml
<ListView>
    <fullName>Customer_Survey_Status_My_Contacts_PS</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Customer_Survey_Eligible__c</columns>
    <columns>Survey_Flag__c</columns>
    <columns>Reason__c</columns>
    <columns>Decision_Maker__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Level__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Active_Contact__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Additional_Relationships__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.CustomerContact</value>
    </filters>
    <filters>
        <field>Active_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Additional_Relationships__c</field>
        <operation>includes</operation>
        <value>Professional Services</value>
    </filters>
    <label>Customer Survey Status - My Contacts PS</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>