force-app/main/default/objects/Contact/listViews/EDM_campaign.listView-meta.xml
<ListView>
    <fullName>EDM_campaign</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Key_Contact__c</columns>
    <columns>IS_EMAIL_ADDRESS_BOUNCED</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>CATM My AM Change Over list - 04/10/2021</label>
    <sharedTo>
        <group>Australia_IBG_Core_Group</group>
    </sharedTo>
</ListView>