force-app/main/default/objects/Contact/listViews/Email_Bounced_Reason.listView-meta.xml
<ListView>
    <fullName>Email_Bounced_Reason</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>IS_EMAIL_ADDRESS_BOUNCED</columns>
    <columns>CONTACT.EMAIL_BOUNCED_DATE</columns>
    <columns>CONTACT.EMAIL_BOUNCED_REASON</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_EMAIL_ADDRESS_BOUNCED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CATM Email Bounced list</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_CATM</group>
    </sharedTo>
</ListView>