force-app/main/default/objects/Contact/listViews/FI_Contacts.listView-meta.xml
<ListView>
    <fullName>FI_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CATM_Region__c</field>
        <operation>equals</operation>
        <value>NABG</value>
    </filters>
    <filters>
        <field>Business_Unit__c</field>
        <operation>contains</operation>
        <value>FI</value>
    </filters>
    <label>CATM NABG FI  Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_CATM</group>
    </sharedTo>
</ListView>