force-app/main/default/objects/Contact/listViews/Hosp_SMB_Mass_Email.listView-meta.xml
<ListView>
    <fullName>Hosp_SMB_Mass_Email</fullName>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Decision_Maker__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Level__c</columns>
    <columns>Business_Function__c</columns>
    <columns>Survey_Flag__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Hosp SMB Mass Email</label>
    <sharedTo>
        <roleAndSubordinatesInternal>HOSP_SMB_VP</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>