force-app/main/default/objects/Contact/listViews/March_ATMaaS_Campaign.listView-meta.xml
<ListView>
    <fullName>March_ATMaaS_Campaign</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>CATM March ATMaaS Campaign</label>
    <sharedTo>
        <group>All_NABG</group>
    </sharedTo>
</ListView>