force-app/main/default/objects/Contact/listViews/My_Active_Contacts_Prospects.listView-meta.xml
<ListView>
    <fullName>My_Active_Contacts_Prospects</fullName>
    <columns>FULL_NAME</columns>
    <columns>Key_Contact__c</columns>
    <columns>Survey_Flag__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Prospect</value>
    </filters>
    <label>CATM My Active Contacts - Prospects</label>
    <language>en_US</language>
    <sharedTo>
        <group>All_CATM</group>
    </sharedTo>
</ListView>